--- a/sections/main-blog.liquid
+++ b/sections/main-blog.liquid
@@ -1,5 +1,5 @@
 
-<div class="all-blog">
+<div class="all-blog bg-gray green-bg-add">
   <div class="container">
 {%- paginate blog.articles by 7 -%}
 {% assign blog_offset = 0 %}
