--- a/snippets/article-card.liquid
+++ b/snippets/article-card.liquid
@@ -74,7 +74,7 @@
           {%- endif -%}
         </div>
         <div class="blog-link text-center">
-          <a href="{{ article.url }}" class="btn btn-green">Read More</a>
+          <a href="{{ article.url }}" class="btn-custom btn-green"><span>Read More</span></a>
         </div>
       {%- endif -%}
       
