--- a/sections/accordian.liquid
+++ b/sections/accordian.liquid
@@ -1,4 +1,4 @@
-<div class="faq-accordian" style="background-image: url('{{ section.settings.bg-img | img_url:'master' }}');background-size: cover;">
+<div class="faq-accordian green-bg-add bg-gray">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
@@ -12,9 +12,9 @@
         <div class="card">
           <div class="card-header" id="heading-{{forloop.index}}">
             <h2 class="mb-0">
-              <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse-{{forloop.index}}" aria-expanded="true" aria-controls="collapseOne">
+              <a href="#" {% if forloop.index != 1 %}class="collapsed"{% endif %} type="button" data-toggle="collapse" data-target="#collapse-{{forloop.index}}" aria-expanded="true" aria-controls="collapseOne">
                 {{ block.settings.question }}
-              </button>
+              </a>
             </h2>
           </div>
       
