--- a/sections/dark-content.liquid
+++ b/sections/dark-content.liquid
@@ -1,41 +1,43 @@
 <div class="dark-bg-content" style="background-image: url('{{ section.settings.bg_image | img_url : 'master' }}');">
-    <div class="container" >
-      <div class="row" >
-        <div class="col-lg-12">
-          <div class="heading">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="dark-bg-content-inner text-center">
+          <div class="title-white">
             {% if section.settings.heading != blank %}
-              <h1>{{ section.settings.heading }}</h1>
+            <h2 class="h2">{{ section.settings.heading }}</h2>
             {% endif %}
           </div>
-          <div>
+          <div class="content">
             {% if section.settings.text != blank %}
-              <p>{{ section.settings.text }}</p>
+            <p>{{ section.settings.text }}</p>
             {% endif %}
           </div>
         </div>
       </div>
     </div>
   </div>
-  
-  {% schema %}
-  {
-   "name": "Dark Background Content",
-   "settings": [
-       {
-         "id": "bg_image",
-         "type": "image_picker",
-         "label": "Background image"
-       },
-       {
-         "id": "heading",
-         "type": "text",
-         "label": "Heading"
-       },
-       {
-         "id": "text",
-         "type": "html",
-         "label": "Text"
-       }
-   ]
-  }
-  {% endschema %}
+</div>
+
+{% schema %}
+{
+"name": "Dark Background Content",
+"settings": [
+{
+"id": "bg_image",
+"type": "image_picker",
+"label": "Background image"
+},
+{
+"id": "heading",
+"type": "text",
+"label": "Heading"
+},
+{
+"id": "text",
+"type": "html",
+"label": "Text"
+}
+]
+}
+{% endschema %}
