--- a/sections/footer-new.liquid
+++ b/sections/footer-new.liquid
@@ -5,7 +5,7 @@
       <!-- contact us -->
       <div class="row align-items-center">
         <div class="col-lg-2">
-          <div class="title-white text-center">
+          <div class="title-white icon-white text-center">
             {% if section.settings.contactus_heading != blank %}
             <h2 class="h2">{{ section.settings.contactus_heading }}</h2>
             {% endif %}
