--- a/sections/general-content.liquid
+++ b/sections/general-content.liquid
@@ -1,10 +1,10 @@
-<div class="general-content" style="background-image: url('{{ section.settings.bg_image | img_url:'master' }}')">
+<div class="general-content {% if  section.settings.pattern_select == 'green_bg' %} green-bg-add sm-bg bg-gray {% else %}pattern-add{% endif %}">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12">
-				<div class="title-black text-center">
+				<div class="title-black text-center"> 
 					{% if section.settings.heading != blank %}
-						<h5 class="h5 text-black text36">{{ section.settings.heading }}</h5>
+						<h2 class="h2 text-black text36">{{ section.settings.heading }}</h2>
 					{% endif %}
 				
 					{% if section.settings.subheading != blank %}
@@ -29,10 +29,21 @@
  "name": "General Content",
  "settings": [
      {
-       "id": "bg_image",
-       "type": "image_picker",
-       "label": "Image"
-     },
+                  "type": "select",
+                  "id": "pattern_select",
+                  "label":"Select Background Pattern",
+                  "default": "leaf",
+                  "options": [
+                    {
+                      "value": "leaf",
+                      "label":"Leaf"
+                    },
+                    {
+                      "value": "green_bg",
+                      "label": "Green background"
+                    }
+                  ]
+                },
      {
        "id": "heading",
        "type": "text",
