--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -1,8 +1,8 @@
 <div class="breadcrumb" style="background-image: url('{{ section.settings.bg-img | img_url:'master' }}');background-size: cover;">
-<div class="container">
+<div class="container-fluid-xl">
     <div class="row">
       <div class="heading-bead"></div>
-        <div class="col-lg-12">
+        <div class="col-lg-12 p-0">
             {% if section.settings.heading != blank %}
                     <h1>{{ section.settings.heading }}</h1>
             {% else %}
