--- a/sections/main-collection-banner.liquid
+++ b/sections/main-collection-banner.liquid
@@ -4,9 +4,9 @@
   {% else %}
   <div class="breadcrumb" style="background-image: url('{{ section.settings.bg-img | img_url:'master' }}');background-size: cover;">
   {%- endif -%}
-  <div class="container">
+  <div class="container-fluid-xl">
       <div class="row">
-          <div class="col-lg-12">
+          <div class="col-lg-12 p-0">
               {% if collection.handle == 'all'  %}
               <h1>{{ section.settings.heading }}</h1>    
               {% else %}
