--- a/sections/ourservices.liquid
+++ b/sections/ourservices.liquid
@@ -1,107 +1,114 @@
-<div class="our-services" style="background-image: url('{{ section.settings.bg-img | img_url:'master' }}');background-size: cover;">
-    {% if section.blocks != blank %}
-    <div class="container">
-       {% for block in section.blocks %}
-       {% assign mod = forloop.index | modulo: 2 %}
-       {% if mod != 0 %}
-       <div class="row">
-          <div class="col-lg-4">
-             <div class="image">
-                {% if block.settings.logo-image != blank %}
-                <img src="{{ block.settings.logo-image | img_url : 'master' }}" class="img-fluid" alt="{{ block.settings.heading }}">
-                {% endif %}
-             </div>
-          </div>
-          <div class="col-lg-8">
-             <div class="content">
-                {% if block.settings.heading != blank %}
-                <h1>{{ block.settings.heading }}</h1>
-                {% endif %}
-                {% if block.settings.button_label != blank %}
-                <a href="{{ block.settings.button_link }}">{{ block.settings.button_label }}</a>
-                {% endif %}
-                {% if block.settings.text != blank %}
-                <p>{{ block.settings.text }}</p>
-                {% endif %}
-             </div>
-          </div>
-       </div>
-       {% else %}
-       <div class="row">
-          <div class="col-lg-8">
-             <div class="content">
-                {% if block.settings.heading != blank %}
-                <h1>{{ block.settings.heading }}</h1>
-                {% endif %}
-                {% if block.settings.button_label != blank %}
-                <a href="{{ block.settings.button_link }}">{{ block.settings.button_label }}</a>
-                {% endif %}
-                {% if block.settings.text != blank %}
-                <p>{{ block.settings.text }}</p>
-                {% endif %}
-             </div>
-          </div>
-          <div class="col-lg-4">
-             <div class="image">
-                {% if block.settings.logo-image != blank %}
-                <img src="{{ block.settings.logo-image | img_url : 'master' }}" class="img-fluid" alt="{{ block.settings.heading }}">
-                {% endif %}
-             </div>
-          </div>
-       </div>
-       {% endif %}
-       {% endfor %}
-    </div>
-    {% endif %}
- </div>
- {% schema %}
- {
- "name":"Services",
- "settings": [
- {
- "id": "bg-img",
- "type": "image_picker",
- "label": "Image"
- }
- ],
- "blocks":[
- {
- "type":"image-section",
- "name":"service",
- "settings":[
- {
- "id":"logo-image",
- "type":"image_picker",
- "label":"Image"
- },
- {
- "id":"heading",
- "type":"text",
- "label":"Heading"
- },
- {
- "id":"button_label",
- "type":"text",
- "label":"Button label"
- },
- {
- "id":"button_link",
- "type":"url",
- "label":"Button link"
- },
- {
- "id":"text",
- "type":"html",
- "label":"Text"
- }
- ]
- }
- ],
- "presets":[
- {
- "name":"Services",
- "category":"Services"
- }
- ]
- }
- {% endschema %}
+<div class="our-services green-bg-add bg-gray">
+   {% if section.blocks != blank %}
+   <div class="container">
+      {% for block in section.blocks %}
+      {% assign mod = forloop.index | modulo: 2 %}
+      {% if mod != 0 %}
+      <div class="our-services-block">
+         <div class="row align-items-center">
+            <div class="col-lg-4">
+               <div class="image">
+                  {% if block.settings.logo-image != blank %}
+                  <img src="{{ block.settings.logo-image | img_url : 'master' }}" class="img-fluid"
+                     alt="{{ block.settings.heading }}">
+                  {% endif %}
+               </div>
+            </div>
+            <div class="col-lg-8">
+               <div class="content">
+                  {% if block.settings.heading != blank %}
+                  <h2 class="h2">{{ block.settings.heading }}</h2>
+                  {% endif %}
+                  {% if block.settings.button_label != blank %}
+                  <a href="{{ block.settings.button_link }}">{{ block.settings.button_label }}</a>
+                  {% endif %}
+                  {% if block.settings.text != blank %}
+                  <p>{{ block.settings.text }}</p>
+                  {% endif %}
+               </div>
+            </div>
+         </div>
+      </div>
+
+      {% else %}
+      <div class="our-services-block">
+         <div class="row align-items-center">
+            <div class="col-lg-8">
+               <div class="content">
+                  {% if block.settings.heading != blank %}
+                  <h2 class="h2">{{ block.settings.heading }}</h2>
+                  {% endif %}
+                  {% if block.settings.button_label != blank %}
+                  <a class="btn btn-transparent-black btn-rounded text-center" href="{{ block.settings.button_link }}"> <span>{{ block.settings.button_label }}</span></a>
+                  {% endif %}
+                  {% if block.settings.text != blank %}
+                  <p>{{ block.settings.text }}</p>
+                  {% endif %}
+               </div>
+            </div>
+            <div class="col-lg-4">
+               <div class="image">
+                  {% if block.settings.logo-image != blank %}
+                  <img src="{{ block.settings.logo-image | img_url : 'master' }}" class="img-fluid"
+                     alt="{{ block.settings.heading }}">
+                  {% endif %}
+               </div>
+            </div>
+         </div>
+      </div>
+      {% endif %}
+      {% endfor %}
+   </div>
+   {% endif %}
+</div>
+{% schema %}
+{
+"name":"Services",
+"settings": [
+{
+"id": "bg-img",
+"type": "image_picker",
+"label": "Image"
+}
+],
+"blocks":[
+{
+"type":"image-section",
+"name":"service",
+"settings":[
+{
+"id":"logo-image",
+"type":"image_picker",
+"label":"Image"
+},
+{
+"id":"heading",
+"type":"text",
+"label":"Heading"
+},
+{
+"id":"button_label",
+"type":"text",
+"label":"Button label"
+},
+{
+"id":"button_link",
+"type":"url",
+"label":"Button link"
+},
+{
+"id":"text",
+"type":"html",
+"label":"Text"
+}
+]
+}
+],
+"presets":[
+{
+"name":"Services",
+"category":"Services"
+}
+]
+}
+{% endschema %}
