--- a/sections/customer-review.liquid
+++ b/sections/customer-review.liquid
@@ -19,7 +19,7 @@
               <img src="/assets/4star.png" alt="star-icon">
   
               {% elsif block.settings.rating == '5' %}
-              <img src="/assets/5star.png" alt="star-icon">
+              <img src="{{ 'search-active.svg' | asset_url }}" alt="star-icon">
   
               {% else %}
                 
